# USACO

./: .gitignore  CMakeLists.txt  README.md  conveyor.cpp  cowcheck.cpp  fieldday.cpp  flake.nix  forest.cpp  gitfs.cpp  robot.cpp
.github/workflows/: cmake-multi-platform.yml
include/: Config.h
src/: main.cpp
